--- a/coordinate/package.json
+++ b/coordinate/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@arcgis/core": "^4.29.5",
+    "@fluentui/react-components": "^9.46.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
